# huffman

./: CMakeLists.txt  bit_set.cpp  bit_set.h  const_def.h  file_reader.cpp  file_reader.h  freq_counter.cpp  freq_counter.h  huffman_tree.cpp  huffman_tree.h  type_def.h  utility.cpp
gtest/: gtest_main.cc
test/: buffer_file_for_encode.out  grand_inquisitor.txt  taras_bulba.txt  testing_huffman.cpp  vocabulary.in
